# mcp-servers

./: .gitignore  README.md
.github/workflows/: ast-grep-mcp.yaml  brave-mcp.yaml  chromaDB.yaml  claude-task-master.yaml  dependency-check.yaml  filesystem-mcp.yaml  git-mcp.yaml  github-mcp.yaml  gitingest-mcp.yaml  graph-generator-mcp.yaml  grype-mcp-server.yaml  llm-sandbox-mcp.yaml  locagent-mcp.yaml  markItDown-mcp.yaml  markdownlint-mcp-server.yaml  mcp-server-chart.yaml  mermaid-mcp-server.yaml  mermaid-mcp.yaml  (+14 more)
ast-grep/: Dockerfile  test_mcp.py
ast-grep-mcp/: README.md  final_test.py  pyproject.toml  test_replace.py  wolfi-spdx.json
ast-grep-mcp/src/ast_grep_mcp/: __init__.py
brave-mcp/: Dockerfile  README.md  index.ts  package.json  tsconfig.json
chroma-data/: chroma.sqlite3
chroma-mcp/: .chroma_env  Dockerfile  chromaDockerHTTP.json  chromaNew.json
chromaDB/: .env  Dockerfile  Dockerfile-co  README.md  chromaDockerHTTP.json  chroma_client.py  chromaurl.json  config.yaml  pyproject.toml  sample_client.py
chromaDB/chroma-data/: chroma.sqlite3
chromaDB/chromadb/: chroma.sqlite3
chromaDB/src/chroma_mcp/: Dockerfile  __init_.py  requirements.txt  server.py
claude-task-master/: Dockerfile  Dockerfile-cgr-single  Dockerfile-co  README.md  config.json  package.json
dependency-check/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cgr  Dockerfile.cgr.fixed  FIX-TIMEOUT.md  LIMITATIONS.md  README.md  debug_dockerfile.sh  docker-compose.yml  docker-run-mcp.sh  init-database.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-mcp-inspector.sh  test_container.sh  test_scan.py
dependency-check/examples/: example_client.py
dependency-check/src/dependency_check_mcp/: __init__.py  language_support.py  models.py  scanner.py  server.py  streaming_scanner.py  tools.py
dependency-check/test_venv/: pyvenv.cfg
dependency-check/tests/: __init__.py  conftest.py  test_language_support.py  test_models.py
filesystem-mcp/: .gitignore  Dockerfile  README.md  go.mod  go.sum
git/: Dockerfile
git-mcp/: Dockerfile  README.md  pyproject.toml
git-mcp/src/git_mcp_server/: __main__.py
github-mcp/: Dockerfile  README.md  config.json
gitingest/: Dockerfile
gitingest-mcp/: Dockerfile  README.md  config.json  digest.txt  pyproject.toml  script.py
graph-generator-mcp/: Dockerfile  Dockerfile-one  README.md  package.json
grype-mcp-server/: Dockerfile  README.md  init-db.sh  pyproject.toml  setup.py
grype-mcp-server/src/grype_mcp_server/: __init__.py  server.py
grype-mcp-server/src/grype_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
llm-sandbox/: Dockerfile
llm-sandbox-mcp/: Dockerfile  README.md  mcpConfig.json  pyproject.toml
llm-sandbox-mcp/llm_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm-sandbox-mcp/llm_sandbox_mcp/: __init__.py  __main__.py  main.py
llm-sandbox-mcp/llm_sandbox_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm-sandbox-mcp/mcp_server/: main.py
llm-sandbox-mcp/mcp_server/tests/: test_main.py
locagent/: .dockerignore  Dockerfile.cgr  Dockerfile.minimal  README.md  pytest.ini
locagent-mcp/: .gitignore  Dockerfile.optimized  README.md  docker-entrypoint.sh  mcp-server-freeze.txt  pyproject.toml  run_mcp_server.sh
locagent-mcp/src/mcp_server/: __init__.py  server.py
locagent-mcp/tests/: test_fastmcp_server.py  test_tools.py
markItDown/: Dockerfile
markItDown-mcp/: README.md  pyproject.toml
markItDown-mcp/src/markitdown_mcp/: __about__.py  server.py
markdownlint-mcp-server/: .markdownlint.json  Dockerfile  README.md  pyproject.toml  test.md
markdownlint-mcp-server/src/markdownlint_mcp/: server.py
mcp-mermaid/: package.json
mcp-server-chart/: Dockerfile
mermaid/: Dockerfile-m
mermaid-mcp/: Dockerfile  README.md
mermaid-mcp-server/: Dockerfile  README.md  config.json  index.ts  package.json  tsconfig.json
mindsdb/: Dockerfile
mindsdb-mcp/: Dockerfile  README.md  config.py  requirements.txt  server.py
neo4j-cypher/: Dockerfile  neo4jCypherDocker.json  neo4juvx.json  pyproject.toml
neo4j-cypher-mcp/: Dockerfile  Dockerfile-multi  README.md
neo4j-memory/: Dockerfile  neo4jDocker.json  requirements.txt
neo4j-memory-mcp/: Dockerfile  Dockerfile-multi  README.md  neo4juvx.json  pyproject.toml
opengrep/: Dockerfile  opengrep.py
opengrep-mcp/: README.md  requirements.txt
playwright-mcp/: Dockerfile  README.md  config.json  package.json
playwrite/: Dockerfile  Dockerfile.fixed
postgres-mcp/: Dockerfile  Dockerfile-co  README.md  USAGE_GUIDE.md  config-examples.json  index.ts  package.json  test-mcp.js  test-mcp.py  tsconfig.json
renovate-mcp-server/: .dockerignore  .env.example  Dockerfile  README.Docker.md  README.md  minimal-renovate-config.json  pyproject.toml  run_server.sh
renovate-mcp-server/.github/workflows/: docker.yml
renovate-mcp-server/src/renovate_mcp/: __init__.py  server.py
renovate-mcp-server/src/renovate_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
semgrep/: Dockerfile  pyproject.toml
semgrep-mcp/: Dockerfile  README.md  requirements.txt
serena/: Dockerfile  Dockerfile.og
serena-mcp/: README.md  mcp_config.json
sonar-scanner/: Dockerfile
sonarqube-mcp/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
syft-mcp-server/: Dockerfile  README.md  pyproject.toml  setup.py
trivy-mcp-server/: Dockerfile  README.md  pyproject.toml  setup.py
trivy-mcp-server/src/trivy_mcp_server/: __init__.py  server.py
unified-server/: Dockerfile  go.mod  go.sum
web-content-extractor/: .dockerignore  Dockerfile  README.md  config.json  debug-extract.js  docker-compose.yml  package.json  test-docker-extract.js  test-extract.js  test-fallback.js  test-server.js
zoekt/: .dockerignore  Dockerfile  Dockerfile.ctags  build-docker.sh  docker-compose.ctags.yml  example-usage.md  main.go
zoekt-mcp/: README.md  build-docker-ctags.sh  docker-compose.yml  go.mod  test-docker-ctags.sh  test-docker.sh  test_server.sh
(+52 files in other folders)
