[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ast-grep-mcp"
version = "0.1.0"
description = "MCP Server for ast-grep CLI tool integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ast-grep-mcp = "ast_grep_mcp.server:main"