[project]
name = "chroma-mcp"
version = "0.2.4"
description = "Chroma MCP Server - Vector Database Integration for LLM Applications"
requires-python = ">=3.10"
license = "Apache-2.0"

keywords = ["chroma", "mcp", "vector-database", "llm", "embeddings"]
dependencies = [
    "chromadb>=1.0.10",
    "cohere>=5.14.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "openai>=1.70.0",
    "pillow>=11.1.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=0.19.0",
    "typing-extensions>=4.13.1",
    "voyageai>=0.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chroma_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chroma-mcp = "chroma_mcp:main"

