[project]
name = "gitingest-mcp"
version = "0.1.0"
description = "Gitingest MCP server that provides prompt-friendly text ingest for LLMs"
requires-python = ">=3.12"
dependencies = [
  "gitingest>=0.1.4",
  "mcp[cli]>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Tell Hatch “my importable code is under src/”
package-dir = {"" = "src"}

[tool.hatch.build.targets.wheel]
# The list of importable packages to include
packages = ["gitingest_mcp"]

[project.scripts]
# This creates a console entrypoint called `gitingest-mcp`
gitingest-mcp = "gitingest_mcp.server:main"
