[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markdownlint-mcp-server"
version = "0.1.0"
description = "MCP server for markdownlint - Markdown linting and fixing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "MCP Server Author", email = "author@example.com"}
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
markdownlint-mcp = "markdownlint_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "PD"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]