[project]
name = "mcp-neo4j-memory"
version = "0.1.4"
description = "MCP Neo4j Knowledge Graph Memory Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.10.0",
    "neo4j>=5.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_neo4j_memory"]

[project.scripts]
mcp-neo4j-memory = "mcp_neo4j_memory:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
