[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renovate-mcp-server"
version = "0.1.0"
description = "MCP Server for Renovate - automated dependency updates"
readme = "README.md"
authors = [
    {name = "Santosh", email = "ksantosh@intelops.dev"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
renovate-mcp = "renovate_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["renovate_mcp"]
package-dir = {"" = "src"}
