[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "semgrep-mcp"
version = "0.3.0"
description = "MCP Server for using Semgrep to scan code"
changelog = "CHANGELOG.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.9.2",
    "semgrep>=1.122.0",
]

[project.license]
text = "MIT"

[project.scripts]
semgrep-mcp = "semgrep_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/semgrep_mcp",
]
